force-app/main/default/objects/Associated_Person__c/Associated_Person__c.object-meta.xml
<CustomObject>
    <description>To store incoming details regarding associated people to this account</description>
    <label>Member/Traveller</label>
    <nameField>
        <displayFormat>A-{000000000}</displayFormat>
        <label>Person Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Member/Travellers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>