force-app/main/default/objects/Associated_Person__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Relation to master Account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Associated_People</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>