force-app/main/default/objects/Associated_Person__c/fields/Active_Aquire_Record__c.field-meta.xml
<CustomField>
    <fullName>Active_Aquire_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicating that this is an active Aquire Record.</description>
    <label>Active QBR Record</label>
    <type>Checkbox</type>
</CustomField>