force-app/main/default/objects/Associated_Person__c/fields/Active_Profile_Record__c.field-meta.xml
<CustomField>
    <fullName>Active_Profile_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicating that this is an active Profile record.</description>
    <label>Active Profile Record</label>
    <type>Checkbox</type>
</CustomField>