force-app/main/default/objects/Associated_Person__c/fields/Active_QBD_Record__c.field-meta.xml
<CustomField>
    <fullName>Active_QBD_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicating that this is an active QBD record.</description>
    <label>Active QBD Record</label>
    <type>Checkbox</type>
</CustomField>