force-app/main/default/objects/Associated_Person__c/fields/AMEX_MCA_Number__c.field-meta.xml
<CustomField>
    <fullName>AMEX_MCA_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>AEQCC MCA Number</label>
    <length>128</length>
    <type>Text</type>
</CustomField>