force-app/main/default/objects/Associated_Person__c/fields/Aq_Points_Balance_Account_Information__c.field-meta.xml
<CustomField>
    <fullName>Aq_Points_Balance_Account_Information__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To store incoming information from Aquire</description>
    <label>QBR Points Balance Account Information</label>
    <type>Checkbox</type>
</CustomField>