force-app/main/default/objects/Associated_Person__c/fields/Aquire_Account_Holder_Flag__c.field-meta.xml
<CustomField>
    <fullName>Aquire_Account_Holder_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To store incoming data from Aquire</description>
    <label>QBR Account Holder Flag</label>
    <type>Checkbox</type>
</CustomField>