force-app/main/default/objects/Associated_Person__c/fields/Aquire_Email__c.field-meta.xml
<CustomField>
    <fullName>Aquire_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>QBR Email</label>
    <type>Email</type>
</CustomField>