force-app/main/default/objects/Associated_Person__c/fields/Aquire_Phone__c.field-meta.xml
<CustomField>
    <fullName>Aquire_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>QBR Phone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>