force-app/main/default/objects/Associated_Person__c/fields/Aquire_Promotions__c.field-meta.xml
<CustomField>
    <fullName>Aquire_Promotions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To store incoming information from Aquire</description>
    <label>QBR Promotions</label>
    <type>Checkbox</type>
</CustomField>