force-app/main/default/objects/Associated_Person__c/fields/Aquire_Status__c.field-meta.xml
<CustomField>
    <fullName>Aquire_Status__c</fullName>
    <description>To store incoming data from Aquire</description>
    <encryptionScheme>None</encryptionScheme>
    <label>QBR Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>