force-app/main/default/objects/Associated_Person__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related to Schemes</description>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Member/Travellers</relationshipLabel>
    <relationshipName>Member_Travellers</relationshipName>
    <type>Lookup</type>
</CustomField>