force-app/main/default/objects/Associated_Person__c/fields/Business_Communication__c.field-meta.xml
<CustomField>
    <fullName>Business_Communication__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business Communication</label>
    <type>Checkbox</type>
</CustomField>