force-app/main/default/objects/Associated_Person__c/fields/Comm_Restriction_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Comm_Restriction_Start_Date__c</fullName>
    <description>Field for Data Migration</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Restriction Start Date</label>
    <type>Date</type>
</CustomField>