force-app/main/default/objects/Associated_Person__c/fields/Comm_Restriction_Type__c.field-meta.xml
<CustomField>
    <fullName>Comm_Restriction_Type__c</fullName>
    <description>Field for Data Migration</description>
    <label>Restriction Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>E-mail</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Daily Alert</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>