force-app/main/default/objects/Associated_Person__c/fields/Customer_Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_Employee_ID__c</fullName>
    <description>This is a unique key for persons migrated from Quest.</description>
    <externalId>true</externalId>
    <label>Customer Employee ID</label>
    <type>AutoNumber</type>
</CustomField>