force-app/main/default/objects/Associated_Person__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <defaultValue>DATE(3999,12,31)</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>31/12/3999 is the default value.</inlineHelpText>
    <label>QBD End Date</label>
    <type>Date</type>
</CustomField>