force-app/main/default/objects/Associated_Person__c/fields/Frequent_Flyer_Number__c.field-meta.xml
<CustomField>
    <fullName>Frequent_Flyer_Number__c</fullName>
    <description>To store incoming Frequent Flyer Number</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Frequent Flyer Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>