force-app/main/default/objects/Associated_Person__c/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <description>To store incoming job title</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Job Title</label>
    <length>225</length>
    <type>Text</type>
</CustomField>