force-app/main/default/objects/Associated_Person__c/fields/Last_Flown_Date_DOM__c.field-meta.xml
<CustomField>
    <fullName>Last_Flown_Date_DOM__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Flown Date DOM</label>
    <type>Date</type>
</CustomField>