force-app/main/default/objects/Associated_Person__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>To store incoming last name</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>