force-app/main/default/objects/Associated_Person__c/fields/Lettering_Name__c.field-meta.xml
<CustomField>
    <fullName>Lettering_Name__c</fullName>
    <description>Fields for Data Migration</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Lettering Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>