force-app/main/default/objects/Associated_Person__c/fields/Member_Revenue_INTL__c.field-meta.xml
<CustomField>
    <fullName>Member_Revenue_INTL__c</fullName>
    <label>QMR INTL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>