force-app/main/default/objects/Associated_Person__c/fields/Membership_Current_Tier_f__c.field-meta.xml
<CustomField>
    <fullName>Membership_Current_Tier_f__c</fullName>
    <formula>CASE( 
UPPER(TEXT(Profile_Membership_Current_Tier__c )), 
&quot;CHAIRMANS LOUNGE PLATINUM ONE&quot;,&quot;Platinum One&quot;, 
&quot;CHAIRMANS LOUNGE&quot;,&quot;CHAIRMANS LOUNGE&quot;, 
&quot;FF BRONZE&quot;,&quot;Bronze&quot;, 
&quot;FF GOLD&quot;,&quot;Gold&quot;, 
&quot;FF PLATINUM&quot;,&quot;Platinum&quot;, 
&quot;FF PLATINUM ONE&quot;,&quot;Platinum One&quot;, 
&quot;FF SILVER&quot;,&quot;Silver&quot;, 
&quot;QC BRONZE&quot;,&quot;Bronze&quot;, 
&quot;QC SILVER&quot;,&quot;Silver&quot;, 
TEXT(Profile_Membership_Current_Tier__c ) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Membership Current Tier</label>
    <type>Text</type>
</CustomField>