force-app/main/default/objects/Associated_Person__c/fields/Number_of_employees_del__c.field-meta.xml
<CustomField>
    <fullName>Number_of_employees_del__c</fullName>
    <description>Aquire number of company employees represented by a range.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Number of employees</label>
    <length>40</length>
    <type>Text</type>
</CustomField>