force-app/main/default/objects/Associated_Person__c/fields/Number_of_flights_INTL__c.field-meta.xml
<CustomField>
    <fullName>Number_of_flights_INTL__c</fullName>
    <label>Number of flights INTL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>