force-app/main/default/objects/Associated_Person__c/fields/Phone_Extension__c.field-meta.xml
<CustomField>
    <fullName>Phone_Extension__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Phone Extension</label>
    <length>20</length>
    <type>Text</type>
</CustomField>