force-app/main/default/objects/Associated_Person__c/fields/Prim_Party_Id__c.field-meta.xml
<CustomField>
    <fullName>Prim_Party_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Prim Party Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>