force-app/main/default/objects/Associated_Person__c/fields/Profile_AKA__c.field-meta.xml
<CustomField>
    <fullName>Profile_AKA__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Also know as</label>
    <type>TextArea</type>
</CustomField>