force-app/main/default/objects/Associated_Person__c/fields/Profile_CL_Flag__c.field-meta.xml
<CustomField>
    <fullName>Profile_CL_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chairmans Lounge Member</label>
    <type>Checkbox</type>
</CustomField>