force-app/main/default/objects/Associated_Person__c/fields/Profile_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Profile_Country_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Country Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>