force-app/main/default/objects/Associated_Person__c/fields/Profile_Email__c.field-meta.xml
<CustomField>
    <fullName>Profile_Email__c</fullName>
    <description>To be used to capture the email address from Profile (Loyalty System)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Profile Email</label>
    <length>150</length>
    <type>Text</type>
</CustomField>