force-app/main/default/objects/Associated_Person__c/fields/Profile_FF_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Profile_FF_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Frequent Flyer Market Research Opt Out</label>
    <type>Checkbox</type>
</CustomField>