force-app/main/default/objects/Associated_Person__c/fields/Profile_Homeport__c.field-meta.xml
<CustomField>
    <fullName>Profile_Homeport__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Homeport</label>
    <type>TextArea</type>
</CustomField>