force-app/main/default/objects/Associated_Person__c/fields/Profile_Marital_Status__c.field-meta.xml
<CustomField>
    <fullName>Profile_Marital_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Marital Status</label>
    <type>TextArea</type>
</CustomField>