force-app/main/default/objects/Associated_Person__c/fields/Profile_Membership_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Profile_Membership_Customer_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Membership Customer Type</label>
    <type>TextArea</type>
</CustomField>