force-app/main/default/objects/Associated_Person__c/fields/Profile_Membership_Lifetime_Tier__c.field-meta.xml
<CustomField>
    <fullName>Profile_Membership_Lifetime_Tier__c</fullName>
    <label>Membership Lifetime Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bronze</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Platnium</fullName>
            </value>
            <value>
                <fullName>Platnium One</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>