force-app/main/default/objects/Associated_Person__c/fields/Profile_No_Dep_Child__c.field-meta.xml
<CustomField>
    <fullName>Profile_No_Dep_Child__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Number of Dependent Children</label>
    <length>5</length>
    <type>Text</type>
</CustomField>