force-app/main/default/objects/Associated_Person__c/fields/Profile_Phone__c.field-meta.xml
<CustomField>
    <fullName>Profile_Phone__c</fullName>
    <description>To be used to capture the phone number from Profile (Loyalty System)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Profile Phone</label>
    <type>Phone</type>
</CustomField>