force-app/main/default/objects/Associated_Person__c/fields/Profile_Phone_Area_Code__c.field-meta.xml
<CustomField>
    <fullName>Profile_Phone_Area_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Area Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>