force-app/main/default/objects/Associated_Person__c/fields/Profile_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Profile_Postcode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Postcode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>