force-app/main/default/objects/Associated_Person__c/fields/Profile_QC_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Profile_QC_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Qantas Club End Date</label>
    <type>Date</type>
</CustomField>