force-app/main/default/objects/Associated_Person__c/fields/Profile_QC_Years__c.field-meta.xml
<CustomField>
    <fullName>Profile_QC_Years__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Qantas Club Membership Years</label>
    <length>20</length>
    <type>Text</type>
</CustomField>