force-app/main/default/objects/Associated_Person__c/fields/Profile_Trav_Pref_Type__c.field-meta.xml
<CustomField>
    <fullName>Profile_Trav_Pref_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Travel Preferences Type</label>
    <type>TextArea</type>
</CustomField>