force-app/main/default/objects/Associated_Person__c/fields/QBD_First_Name__c.field-meta.xml
<CustomField>
    <fullName>QBD_First_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>To capture the First Name that comes in as part of QBD registration or QBD Traveller request</inlineHelpText>
    <label>QBD First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>