force-app/main/default/objects/Associated_Person__c/fields/QBD_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>QBD_Last_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>To capture the Last Name that comes in as part of QBD registration or QBD Traveller request. This is compared with the &quot;Last Name&quot; that comes in from Profile and this comparision determines the &apos;Last Name Match&apos; flag.</inlineHelpText>
    <label>QBD Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>