force-app/main/default/objects/Associated_Person__c/fields/Quest_Address_ID__c.field-meta.xml
<CustomField>
    <fullName>Quest_Address_ID__c</fullName>
    <description>Field for Data Migration</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Address ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>