force-app/main/default/objects/Associated_Person__c/fields/Receive_Of_Business_Communications__c.field-meta.xml
<CustomField>
    <fullName>Receive_Of_Business_Communications__c</fullName>
    <label>Receive Of Business Communications</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>