force-app/main/default/objects/Associated_Person__c/fields/Registry_ID__c.field-meta.xml
<CustomField>
    <fullName>Registry_ID__c</fullName>
    <description>Registry ID of the Account this Person belongs to.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Registry ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>