force-app/main/default/objects/Associated_Person__c/fields/Related_QCI__c.field-meta.xml
<CustomField>
    <fullName>Related_QCI__c</fullName>
    <formula>Account__r.Qantas_Corporate_Identifier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account QCI</label>
    <type>Text</type>
</CustomField>