force-app/main/default/objects/Associated_Person__c/fields/Relationship__c.field-meta.xml
<CustomField>
    <fullName>Relationship__c</fullName>
    <label>Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agreement Approver</fullName>
            </value>
            <value>
                <fullName>Agreement Signer</fullName>
            </value>
            <value>
                <fullName>BOARD_MEMBER</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Membership</fullName>
            </value>
            <value>
                <fullName>Organization Contact</fullName>
            </value>
            <value>
                <fullName>POS_EMPLOYMENT</fullName>
            </value>
            <value>
                <fullName>QF_Associate</fullName>
            </value>
            <value>
                <fullName>Travel Mgr</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>