force-app/main/default/objects/Associated_Person__c/fields/Sync_Traveller_Override__c.field-meta.xml
<CustomField>
    <fullName>Sync_Traveller_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>System Administrators can use this flag to override the &apos;last name&apos; matching logic so that the traveller record can be forced to flow across to the downstream system.</inlineHelpText>
    <label>Sync Traveller Override</label>
    <type>Checkbox</type>
</CustomField>