force-app/main/default/objects/Associated_Person__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>QBD Title [System]</label>
    <length>128</length>
    <type>Text</type>
</CustomField>