force-app/main/default/objects/Associated_Person__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Name__c</columns>
    <columns>Frequent_Flyer_Number__c</columns>
    <columns>Profile_CL_Flag__c</columns>
    <columns>SSU__c</columns>
    <columns>Profile_Membership_Current_Tier__c</columns>
    <columns>Profile_Membership_Lifetime_Tier__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>