force-app/main/default/objects/Associated_Person__c/listViews/Platinum_one.listView-meta.xml
<ListView>
    <fullName>Platinum_one</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Name__c</columns>
    <columns>Frequent_Flyer_Number__c</columns>
    <columns>Profile_CL_Flag__c</columns>
    <columns>SSU__c</columns>
    <columns>Profile_Membership_Current_Tier__c</columns>
    <columns>Profile_Membership_Lifetime_Tier__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Membership_Current_Tier_f__c</field>
        <operation>equals</operation>
        <value>Platinum One</value>
    </filters>
    <label>Platinum One</label>
</ListView>